--- a/configclient.properties
+++ b/configclient.properties
@@ -1,5 +1,5 @@
 server.port=9092
-name=xiaokeaiyyy
+name=xiaokeaiyyy111
 spring.rabbitmq.host=192.168.146.140
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
